@@ -3,17 +3,12 @@
 Examples: using ColanderAlchemy with Deform
 ===========================================
 
-``Colander`` options can be specified declaratively in ``SQLAlchemy`` models
-as shown in the code below::
+When using ``ColanderAlchemy``, the resulting ``Colander`` schema will
+reflect the configuration on the mapped class, as shown in the code below::
 
-    from colanderalchemy import Column
-    from colanderalchemy import relationship
-    from colanderalchemy import SQLAlchemyMapping
+    from colanderalchemy import SQLAlchemySchemaNode
 
-    from sqlalchemy import Enum
-    from sqlalchemy import ForeignKey
-    from sqlalchemy import Integer
-    from sqlalchemy import Unicode
+    from sqlalchemy import Enum, ForeignKey, Integer, Unicode
     from sqlalchemy.ext.declarative import declarative_base
 
 
@@ -37,7 +32,7 @@ as shown in the code below::
         phones = relationship('Phone')
 
 
-    person = SQLAlchemyMapping(Person)
+    schema = SQLAlchemySchemaNode(Person)
 
 The resulting schema from the code above is the same as what would
 be produced by constructing the following ``Colander`` schema by hand::
@@ -66,22 +61,27 @@ be produced by constructing the following ``Colander`` schema by hand::
                                       colander.Length(0, 128))
         phones = Phones(missing=[], default=[])
 
-This means that geting a ``Deform`` form to use ``ColanderAlchemy`` is 
-as simple as using any other ``Colander`` schema::
 
-    from colanderalchemy import SQLAlchemyMapping
+Note the various configuration aspects like field length and the like
+will automatically be mapped. This means that geting a ``Deform`` form
+to use ``ColanderAlchemy`` is as simple as using any other ``Colander``
+schema::
+
+    from colanderalchemy import SQLAlchemySchemaNode
     from deform import Form
 
-    # Using Colander
+    # Using Colander requires manually constructing the schema
     # person = Person()
 
-    # Using ColanderAlchemy
-    person = SQLAlchemyMapping(Person)
+    # Using ColanderAlchemy is easy!
+    person = SQLAlchemySchemaNode(Person)
     
     form = Form(person, buttons=('submit',))
 
 Keep in mind that if you want additional control over the resulting
 ``Colander`` schema and nodes produced (such as controlling a node's `title`,
 `description`, `widget` or more), you are able to provide appropriate keyword
-arguments declaratively within the ``SQLAlchemy`` model. For more
-information, see :ref:`customization`.
+arguments declaratively within the ``SQLAlchemy`` model as part of the
+respective ``info`` argument to a :class:`sqlalchemy.Column` or
+:meth:`sqlalchemy.orm.relationship` declaration. For more information, see
+:ref:`customization`.
